Updated '_posts/2018-05-01-cavs-wind.md' via CloudCannon

--- a/_posts/2018-05-01-cavs-wind.md
+++ b/_posts/2018-05-01-cavs-wind.md
@@ -5,7 +5,7 @@ date:   2018-05-01 16:16:01 -0600
 categories: baseball news
 permalink: /:categories/:title/
 baseurl: ../../../
-news_thumb: /siteicon.png
+news_thumb_image: /siteicon.png
 description: "The Cavs defeated Mercer County (NJ) 11-5 in the 2017 Division II Baseball World Series . . ."
 ---
 
