--- a/_posts/2018-05-01-cavs-wind.md
+++ b/_posts/2018-05-01-cavs-wind.md
@@ -3,9 +3,10 @@ layout: post
 title:  Cavs win first DII World Series
 date:   2018-05-01 16:16:01 -0600
 categories: baseball news
+sport-category: Baseball
 permalink: /:categories/:title/
 baseurl: ../../../
-news_thumb_image: /siteicon.png
+news_thumb_image: /assets/img/16-9_thumb.png
 description: "The Cavs defeated Mercer County (NJ) 11-5 in the 2017 Division II Baseball World Series . . ."
 ---
 
