Update links to news-thumbnails for newly ...
created sports news thumbs. Add missing apostrophes to titles

--- a/_posts/2018-05-01-cavs-wind.md
+++ b/_posts/2018-05-01-cavs-wind.md
@@ -6,7 +6,7 @@ categories: baseball news
 sport-category: Baseball
 permalink: /:categories/:title/
 baseurl: ../../../
-news_thumb_image: /assets/img/16-9_thumb.png
+news_thumb_image: /uploads/champions-thumb.jpg
 description: "The Cavs defeated Mercer County (NJ) 11-5 in the 2017 Division II Baseball World Series . . ."
 ---
 
