--- a/_posts/2018-05-01-cavs-wind.md
+++ b/_posts/2018-05-01-cavs-wind.md
@@ -1,7 +1,9 @@
 ---
 title:  Cavs win first DII World Series
 date:   2018-05-01 16:16:01 -0600
-categories: baseball news
+categories:
+  - baseball
+  - news
 sport-category: Baseball
 news_thumb_image: /uploads/champions-thumb.jpg
 description: "The Cavs defeated Mercer County (NJ) 11-5 in the 2017 Division II Baseball World Series . . ."
