Add thumb_alt to front-matter for alt-text

--- a/_posts/2018-05-01-cavs-wind.md
+++ b/_posts/2018-05-01-cavs-wind.md
@@ -6,6 +6,7 @@ categories:
   - news
 sport-category: Baseball
 news_thumb_image: /uploads/champions-thumb.jpg
+thumb_alt: ""
 description: "The Cavs defeated Mercer County (NJ) 11-5 in the 2017 Division II Baseball World Series . . ."
 ---
 
