Change all occurances of post "title:" to "post_title:" in frontmatter...
Needed a frontmatter definition that was different from "title" in page titles.

Any use of title: within the front-matter of a post has been changed to post_title:
Any liquid in pages or includes that call "post.title" has been changed to call "post.post_title"

--- a/_posts/2018-05-01-cavs-wind.md
+++ b/_posts/2018-05-01-cavs-wind.md
@@ -1,5 +1,5 @@
 ---
-title: Cavs win first DII World Series
+post_title: Cavs win first DII World Series
 date: 2017-06-07 22:16:00
 categories:
   - baseball
